<resources>
    <string name="app_name">AppProfile</string>
    <string name="hint_name">Nombre y apellidos</string>
    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_website">Sitio Web</string>
    <string name="hint_phone">Teléfono</string>
    <string name="hint_mi_ubicacion">Localizacion</string>
    <string name="main_show_map">Ver en el mapa</string>
    <string name="habilitar_location">Habilitar localizacion</string>
    <string name="edit_title">Editar datos de usuario</string>
    <string name="hint_nametil">Escribe tu nombre y apellidos</string>
    <string name="hint_correotil">Escribe tu E-mail</string>
    <string name="hint_webtil">Escribe el URL de tu página web</string>
    <string name="hint_phonetil">Escribe tu número de teléfono</string>
    <string name="hint_longtil">Longitud</string>
    <string name="hint_lattil">Latitud</string>
    <string name="key_nombre">k_nombre</string>
    <string name="key_email">k_email</string>
    <string name="key_website">k_website</string>
    <string name="key_phone">k_phone</string>
    <string name="key_latitud">k_latitud</string>
    <string name="key_longitud">k_longitud</string>
    <string name="ToastMsgNoCompatibilidad">No se encontró compatibilidad con la app.</string>
    <string name="key_image">k_image</string>
    <string name="settings_title">Configuración</string>
    <string name="settings_titlee">Settings</string>
    <string name="preferences_touch_title">Touch</string>
    <string name="preferences_enable_clicks">Habilitar clicks</string>
    <string name="preferences_key_enable_clicks">pref_enable_clicks</string>
    <string name="preferences_data_title">Datos</string>
    <string name="preferences_delete_data">Eliminar datos del usuario</string>
    <string name="preferences_key_delete_data">pref_delete_data</string>
    <string name="preferences_restore_data">Restaurar datos de usuario y configuraciones</string>
    <string name="preferences_key_restore_data">pref_restore_data</string>
    <string name="preferences_restore_settings">Restaurar configuraciones</string>
    <string name="preferences_key_restore_settings">pref_restore_conf</string>
    <string name="preferences_img_size_small">Pequeña</string>
    <string name="preferences_img_size_medium">Mediana</string>
    <string name="preferences_img_size_large">Grande</string>
    <string name="preferences_img_size_small_key">pref_small</string>
    <string name="preferences_img_size_medium_key">pref_medium</string>
    <string name="preferences_img_size_large_key">pref_large</string>
    <string name="preferences_ui_title">Interfaz</string>
    <string name="preferences_ui_img_size">Tamaño de la imagen</string>
    <string name="preferences_ui_img_size_key">pref_ui_img_size</string>
</resources>