<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/common_padding_default"
        android:paddingHorizontal="@dimen/common_padding_default"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/profile_corner_radius_large"
            app:cardElevation="@dimen/common_padding_default"
            android:layout_margin="@dimen/common_padding_default"
            >
            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="@dimen/profile_img_size_large"
                android:layout_height="@dimen/profile_img_size_large"
                android:src="@drawable/cursos_android_ant"
                android:scaleType="centerCrop"
                />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min_default"
            android:text="@string/hint_name"
            />
        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_text_size_large"
            android:textColor="@color/black"
            android:textStyle="italic"
            tools:text="Nunchakita"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min_default"
            android:text="@string/hint_email"
            />
        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/profile_text_size_middle"
            android:textColor="@color/black"
            android:textStyle="italic"
            tools:text="Nunchakita@gmail.com"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min_default"
            android:text="@string/hint_website"
            />
        <TextView
            android:id="@+id/tvWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="italic"
            tools:text="mi.pagina.web.domain"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min_default"
            android:text="@string/hint_phone"
            />
        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="italic"
            tools:text="+34 622 222 222"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min_default"
            android:text="@string/hint_mi_ubicacion"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:text="@string/main_show_map"
            android:drawableEnd="@drawable/ic_location"
            />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvAdjustLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/cardview_dark_background"
            android:textStyle="bold"
            android:text="@string/habilitar_location"
            android:drawableStart="@drawable/ic_settings"
            android:layout_marginTop="@dimen/margin_min_large"
            />
    </LinearLayout>
</ScrollView>