<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/common_padding_default">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/profile_img_size_large"
            android:layout_height="@dimen/profile_img_size_large">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardCornerRadius="@dimen/profile_corner_radius_large"
                app:cardElevation="@dimen/common_padding_none">
                <ImageView
                    android:id="@+id/imgProfileEdit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/ic_launcher"
                    android:scaleType="centerCrop"
                    />
            </androidx.cardview.widget.CardView>
            <ImageButton
                android:id="@+id/ibImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_img_search"
                android:background="?selectableItemBackground"
                android:contentDescription="Cambiar im de perfil" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_nametil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
            app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
            app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
            app:boxCornerRadiusTopStart="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_correotil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
            app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
            app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
            app:boxCornerRadiusTopStart="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEditText"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_webtil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
            app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
            app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
            app:boxCornerRadiusTopStart="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/common_padding_default"
            android:layout_marginTop="@dimen/common_padding_default"
            android:hint="@string/hint_phonetil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
            app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
            app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
            app:boxCornerRadiusTopStart="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etLat"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/common_padding_default"
            android:layout_marginHorizontal="@dimen/common_padding_default">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_lattil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
            app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
            app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
            app:boxCornerRadiusTopStart="@dimen/common_padding_default"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal|numberSigned"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/etLong"

                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_weight="50"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/hint_longtil"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxCornerRadiusBottomEnd="@dimen/common_padding_default"
            app:boxCornerRadiusBottomStart="@dimen/common_padding_default"
            app:boxCornerRadiusTopEnd="@dimen/common_padding_default"
            app:boxCornerRadiusTopStart="@dimen/common_padding_default">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal|numberSigned"
                />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    </LinearLayout>
</ScrollView>